--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,11 +45,20 @@
 			<a href="/"></a>
 		</div>
 		<div class="lang">
-			<a href="/zh">中文</a>|<a href="/en">English</a>
+			<a href="/zh" class="zh">中文</a>|<a href="/en" class="en">English</a>
 		</div>
 		<div id="navlist">
 			<table class="nav-tb">
 				<tr>
+				<td class="nav-td">
+					<table>
+						<tr>
+							<td class="nav-l"></td>
+							<td class="nav-m"><a href="/"><%= _t 'base.home' %></a></td>
+							<td class="nav-r"></td>
+						</tr>
+					</table>
+				</td>
 				<td class="nav-td">
 					<table>
 						<tr>
