--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -33,7 +33,7 @@ select:focus,input.input:focus,textarea:focus,px_avatar:focus{color:#5093D5;bord
 .border_top{ border-top:1px solid #ddd !important;}
 .border_bottom{ border-top:1px solid #ddd !important;}
 .clear{height:0;overflow:hidden;clear:both;}
-.con_layout{ width:980px; margin:0 auto; padding:20px 7px 0 8px;background:#fff;}
+.con_layout{ width:980px; margin:0 auto; padding:0 7px 0 8px;background:#fff;}
 
 .clearfix:after {content:"."; display:block; height:0; clear:both; visibility:hidden; }
 * html>body .clearfix { display:inline-block; width:100%; }
@@ -44,13 +44,13 @@ select:focus,input.input:focus,textarea:focus,px_avatar:focus{color:#5093D5;bord
 /*头部*/
 #header{width:100%;margin:0 auto;text-align:right;}
 /*导航*/
-.navbox{width:100%;height:88px;margin:0 auto;position:relative;z-index:999;}
-#navlist{position:absolute;top:52px;left:0;width:100%;height:36px;}
+.navbox{width:100%;height:108px;margin:0 auto;position:relative;z-index:999;background:url(/assets/top_bg.jpg) repeat-x;}
+#navlist{position:absolute;top:72px;left:0;width:100%;height:36px;}
 #navlist .nav-tb{margin:0 auto;border:0;border-collapse:collapse;border-spacing:0;}
 #navlist .nav-tb .nav-td{position:relative;z-index:0;}
 #navlist .nav-tb table{border:0;border-spacing:0;border-collapse:collapse;}
 #navlist .nav-tb td{height:36px;line-height:36px;}
-#navlist .nav-tb td a{padding:0 20px;font-size:14px;color:#333;}
+#navlist .nav-tb td a{padding:0 20px;font-size:14px;font-weight:bold;color:#333;}
 #navlist .nav-tb td.nav-l{width:9px;}
 #navlist .nav-tb td.nav-r{width:8px;}
 #navlist .nav-tb table.hover{background:url(/assets/nav_m_bg.jpg) repeat-x;}
@@ -65,10 +65,12 @@ select:focus,input.input:focus,textarea:focus,px_avatar:focus{color:#5093D5;bord
 #navlist .nav-tb .subbox .item dl{display:none;position:absolute;top:0;left:0;z-index:999;}
 #navlist .nav-tb .subbox .item dl dt{padding:0 15px 0 32px;background:url(/assets/sub_li2.jpg) no-repeat left center;}
 #navlist .nav-tb .subbox .item .dt_hover{background:url(/assets/sub_li_hover2.jpg) no-repeat left center;}
-.top_logo{width:253px;height:35px;position:absolute;top:5px;left:0;background-image:url(/assets/language.png);background-repeat:no-repeat;}
-.top_logo a{ width:253px; height:35px; display:block;}
-.lang{position:absolute;top:10px;right:10px;}
-.lang a{margin:0 10px;}
+.top_logo{width:253px;height:45px;position:absolute;top:25px;left:0;background-image:url(/assets/language.png);background-repeat:no-repeat;}
+.top_logo a{ width:253px; height:45px; display:block;}
+.lang{position:absolute;top:30px;right:10px;}
+.lang a{margin:0 16px;padding-left:22px;}
+.lang a.zh{background:url(/assets/cn.png) no-repeat left center;}
+.lang a.en{background:url(/assets/en.png) no-repeat left center;}
 /*切换*/
 .index_pic{width:100%;height:400px;position:relative; margin-top:10px;}
 .myfocus{width:100%;height:400px;margin:0 auto;}
@@ -247,9 +249,9 @@ th:100%; background-repeat:repeat-y; }
 .sale-list td.sale-label{width:65px;}
 .sale-list td a{display:block;margin:0 0 4px 0;}
 
-.map_pic{ width:652px; height:480px; background:url(/assets/map/map.gif) no-repeat; top:80px; left:30px;position:relative; z-index:1;}
-.map_pic h2{width:100%; height:24px; position:absolute; left:0; top:-60px; z-index:30; display:block;font-family:"Microsoft YaHei","微软雅黑"; font-weight:400; color:#333; font-size:18px;}
-.map_pic p{ width:100%; line-height:20px; position:absolute; left:0; top:-15px; font-size:14px;}
+.map_pic{ width:652px; height:480px; background:url(/assets/map/map.gif) no-repeat; top:90px; left:30px;position:relative; z-index:1;}
+.map_pic h2{width:100%; height:24px; position:absolute; left:0; top:-70px; z-index:30; display:block;font-family:"Microsoft YaHei","微软雅黑"; font-weight:400; color:#333; font-size:18px;}
+.map_pic p{ width:100%; line-height:20px; position:absolute; left:0; top:-32px; font-size:14px;}
 .map_pic img{ position:absolute; z-index:1; left:0; top:0;filter:alpha(opacity=0);-moz-opacity:0;-khtml-opacity:0;opacity:0;}
 
 /*服务支持*/
