--- a/app/views/sales/index.html.erb
+++ b/app/views/sales/index.html.erb
@@ -6,8 +6,8 @@
 	<div class="con_left sale_left">
 		<div id="sale_con"></div>
 		<div class="map_pic">
-			<h2>梦露全国办事处</h2>
-			<p>目前已设立的办事处地区有：上海公司总部、北京、广州、深圳、沈阳、西安、银川、成都、南昌</p>
+			<h2>梦露中国地区办事处</h2>
+			<p>目前已设立的办事处地区有：上海、北京、广州、深圳、沈阳、西安、银川、成都、南昌</p>
 			<img src="/assets/blank.png" usemap="#Map" style=" width:652px; height:480px;display:block; position:absolute; z-index:10;"/>
 			<map name="Map" id="Map">
 				<area shape="rect" coords="549,296,588,312" areaID="2">
