--- a/app/views/admin/product_files/_form.html.erb
+++ b/app/views/admin/product_files/_form.html.erb
@@ -23,15 +23,7 @@
 			<td class="data_label">名称：</td>
 			<td class="data_ipt">
 				<%= f.text_field :title, :style => "width:400px;" %>
-			</td>
-		</tr>
-		<tr>
-			<td class="data_label">类型：</td>
-			<td class="data_ipt">
-				<select name="product_file[data_type]">
-					<option value="drawing"<% if @product_file.data_type == "drawing" %> selected="selected"<% end %>>产品图纸</option>
-					<option value="doc"<% if @product_file.data_type == "doc" %> selected="selected"<% end %>>说明书</option>
-				</select>
+				<input type="hidden" name="product_file[data_type]" value="doc" />
 			</td>
 		</tr>
 		<tr>
