--- a/app/views/services/guestbooks.html.erb
+++ b/app/views/services/guestbooks.html.erb
@@ -5,15 +5,25 @@
 <div class="content_box service">
 	<div class="ser_action">
 		<h2><%= _t "location.guestbooks" %></h2>
-		<div class="ser_con">
+		<p class="guestbook-action"><a href="/guestbook_new">&gt; 我要留言</a></p>
+		<div class="ser_con guestbooks">
+			<% if @guestbooks.length > 0 %>
 			<ul>
+				<% @guestbooks.each do |gb| %>
+				<% info = JSON.parse(gb.area) %>
+				<% content = JSON.parse(gb.text) %>
 				<li>
-					<div class="guestbook-t"><span></span></div>
-					<div class="guestbook-q"></div>
-					<div class="guestbook-a"></div>
-					<div class="guestbook-reply"></div>
+					<div class="guestbook-t"><i><%= gb.created_at.strftime("%Y-%m-%d %H:%M") %></i>留言: <%= info["name"] %></div>
+					<div class="guestbook-q"><%= content["text"] %></div>
+					<div class="guestbook-a"><i><%= gb.updated_at.strftime("%Y-%m-%d %H:%M") %></i>网站管理员</div>
+					<div class="guestbook-reply"><%= content["reply"].html_safe %></div>
 				</li>
+				<% end %>
 			</ul>
+			<%= will_paginate @guestbooks, :class => "gbs-paginate" %>
+			<% else %>
+			<div class="guestbooks-none">还没有留言。</div>
+			<% end %>
 		</div>
 	</div>
 </div>
