--- a/app/views/topics/list.html.erb
+++ b/app/views/topics/list.html.erb
@@ -23,8 +23,8 @@
 				</li>
 			</ul>
 			<div class="news-list-ad">
-				<a href="#"><img src="/assets/news_list_ad1.jpg" /></a>
-				<a href="#"><img src="/assets/news_list_ad2.jpg" /></a>
+				<a href="/contact"><img src="/assets/news_list_ad1.jpg" /></a>
+				<a href="/investment"><img src="/assets/news_list_ad2.jpg" /></a>
 			</div>
 		</div>
 		<div class="news-main">
