--- a/app/views/services/guestbook_new.html.erb
+++ b/app/views/services/guestbook_new.html.erb
@@ -1,5 +1,5 @@
 <div class="location">
-	<a href="/"><%= _t "location.index" %></a><a href="/service"><%= _t "location.service" %></a><span><%= _t "location.guestbook_new" %></span>
+	<a href="/"><%= _t "location.index" %></a><a href="/products_intro"><%= _t "location.service" %></a><span><%= _t "location.guestbook_new" %></span>
 </div>
 <div class="clear"></div>
 <div class="content_box service">
