--- a/app/views/admin/faqs/_form.html.erb
+++ b/app/views/admin/faqs/_form.html.erb
@@ -2,8 +2,8 @@
 <div class="nav">
 	<div class="list-opts">
 		<div class="nav-links">
-			<a href="/admin/faqs">产品知识介绍</a>
-			<a href="/admin/faqs/new">添加 产品知识介绍</a>
+			<a href="/admin/faqs">产品知识</a>
+			<a href="/admin/faqs/new">添加 产品知识</a>
 		</div>
 	</div>
 </div>
