--- a/app/views/admin/sales/_form.html.erb
+++ b/app/views/admin/sales/_form.html.erb
@@ -22,9 +22,21 @@
 			</td>
 		</tr>
 		<tr>
+			<td class="data_label">办事处_英文：</td>
+			<td class="data_ipt">
+				<input type="text" name="sale[en_name]" value="<%= @info["en_name"] %>" />
+			</td>
+		</tr>
+		<tr>
 			<td class="data_label">地址：</td>
 			<td class="data_ipt">
 				<input type="text" name="sale[addr]" value="<%= @info["addr"] %>" />
+			</td>
+		</tr>
+		<tr>
+			<td class="data_label">地址_英文：</td>
+			<td class="data_ipt">
+				<input type="text" name="sale[en_addr]" value="<%= @info["en_addr"] %>" />
 			</td>
 		</tr>
 		<tr>
