--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -90,7 +90,23 @@
 					</table>
 					<div class="subbox">
 						<div class="item"><a href="/qualification"><%= _t 'base.qualification' %></a></div>
-						<div class="item"><a href="/quality"><%= _t 'base.quality' %></a></div>
+						<div class="item">
+							<a href="/quality"><%= _t 'base.quality' %></a>
+							<dl>
+								<dt>									
+									<a href="/quality"><%= _t 'base.quality_a' %></a>
+								</dt>
+								<dt>									
+									<a href="/quality_b"><%= _t 'base.quality_b' %></a>
+								</dt>
+								<!--dt>									
+									<a href="/quality_c"><%= _t 'base.quality_c' %></a>
+								</dt>
+								<dt>									
+									<a href="/quality_d"><%= _t 'base.quality_d' %></a>
+								</dt-->
+							</dl>
+						</div>
 					</div>
 				</td>
 				<td class="nav-td">
