--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -206,7 +206,7 @@
 				<li><a href="/declaration"><%= _t 'base.declaration' %></a></li>
 			</ul>
 			<div class="mail">
-				<a href="mailto:moro_sh@morocn.com"><%= _t 'base.mail' %></a>
+				<a href="mailto:morocenter@163.com "><%= _t 'base.mail' %></a>
 			</div>
 			<span class="fr"><em class="tel"></em><%= _t 'base.hotline' %>400-820-0407</span>
 		</div>
