--- a/app/views/products/order_rst.html.erb
+++ b/app/views/products/order_rst.html.erb
@@ -1,7 +1,7 @@
 <div class="location">
-	<a href="/">首页</a><span>产品订购</span>
+	<a href="/"><%= _t "location.index" %></a><span><%= _t "location.product_order" %></span>
 </div>
 <div class="clear"></div>
 <div class="content_box order">
-	<p style="margin:200px 0;text-align:center;font-weight:bold;font-size:14px;">订购成功，我们会在一周内联系您。</p>
+	<p style="margin:200px 0;text-align:center;font-weight:bold;font-size:14px;"><%= _t "product.order_succ" %></p>
 </div>
