--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -200,6 +200,9 @@
 	<div class="clear"></div>
 	<div class="footer_box">
 		<div class="foot_links">
+			<div style="position:absolute;left:50%;display:block;width:300px;margin-left:-150px;text-align:center;">
+				<script src="http://count.2881.com/count/count.asp?id=34121&sx=1&ys=43" language="JavaScript" charset="gb2312"></script>
+			</div>
 			<ul class="fl">
 				<li><a href="/contact"><%= _t 'base.contact' %></a></li>
 				<% if !session[:locale].blank? && session[:locale] != 'zh' %>
