--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -313,6 +313,8 @@ div.ser_tel{background:#dedede url(/assets/tel2.png) no-repeat 10px center; padd
 .foot_links li{float:left;margin-left:14px;padding-left:15px;background:url(/assets/ico_01.gif) no-repeat left center;}
 .foot_links li:first-child{background:none; margin-left:0; padding-left:0;}
 .copyright{border-top:1px solid #D4D4D4;overflow:hidden;clear:both; padding-top:5px; margin-top:5px;}
+.count{position:absolute;left:50%;display:block;width:300px;margin-left:-150px;text-align:center;}
+.count img{margin:0 0 -5px;}
 .foot_links .weibo{ position:absolute; right:335px; top:4px; height:22px;}
 .foot_links .mail{ position:absolute; right:235px; top:4px; height:22px; background:url(/assets/mail.png) no-repeat left center; text-indent:28px;}
 .foot_lj{ width:100%; height:20px; line-height:20px; clear:both; overflow:hidden; margin-top:5px;}
