--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -214,11 +214,13 @@
 			<span class="fr"><em class="tel"></em><%= _t 'base.hotline' %>400-820-0407</span>
 		</div>
 		<div class="copyright">
-			<div class="count">
-				网站目前已有 <script src="http://count.2881.com/count/count.asp?id=34122&sx=1&ys=47" language="JavaScript" charset="gb2312"></script> 人访问
-			</div>
-			<span class="fl"><%= (_t 'base.copyright').html_safe %></span>
-			<span class="fr"><a href="http://www.miibeian.gov.cn/" target="_blank">沪ICP备12033067号-1</a></span>
+			<table class="count">
+				<tr>
+					<td width="312"><%= (_t 'base.copyright').html_safe %></td>
+					<td style="text-align:center;">网站目前已有 <script src="http://count.2881.com/count/count.asp?id=34122&sx=1&ys=47" language="JavaScript" charset="gb2312"></script> 人访问</td>
+					<td width="120"><a href="http://www.miibeian.gov.cn/" target="_blank">沪ICP备12033067号-1</a></td>
+				</tr>
+			</table>
 		</div>
 	</div>
 </div>
