--- a/app/views/account/main.html.erb
+++ b/app/views/account/main.html.erb
@@ -54,6 +54,7 @@
 					<li><a href="/admin/guestbooks" title="网络留言" target="main">客户留言</a></li>
 					<li><a href="/admin/sys/flashpics" title="首页图片轮播" target="main">首页图片轮播</a></li>
 					<li><a href="/admin/sys/index_ads" title="首页图片广告" target="main">首页图片广告</a></li>
+					<li><a href="/admin/sys/sys_count" title="网站计数" target="main">网站计数</a></li>
 					<!--li><a href="/admin/friendlinks" title="友情链接" target="main">友情链接</a></li-->
 					<li><a href="/admin/kfs" title="在线客服" target="main">在线客服</a></li>
 				</ul>
